@@ -1,5 +1,14 @@
 2008-07-10  Sam Weinig  <sam@webkit.org>
 
+        Reviewed by Mark Rowe.
+
+        Remove no-op debug method.
+
+        * css/CSSSelector.cpp:
+        * css/CSSSelector.h:
+
+2008-07-10  Sam Weinig  <sam@webkit.org>
+
         Reviewed by Dave Hyatt and Darin Adler.
 
         Add support for calling querySelector and querySelectorAll on DocumentFragments
